--- a/public/css/kdh-custom.css
+++ b/public/css/kdh-custom.css
@@ -67,11 +67,11 @@
   }
   .about-container {
     padding: 3% 2%;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 200%;
     color: #3A3939;
     background: url('../images/white60.png');
-    text-align: justify;
+    /*text-align: justify;*/
     text-shadow: 0 0 2px #fff;
   }
 
@@ -123,6 +123,10 @@
     padding: 6px 35px;
   }
 
+  #services, #features, #partner, #organisation, #contact {
+    padding-top: 100px;
+  }
+
   #partner {
     /* mark */
     background: url('../images/6_partner/partners.png')
@@ -132,7 +136,6 @@
     -o-background-size: cover;
     background-size: cover;
 
-    padding-top: 6%;
     padding-bottom: 6%;
     border-top: 2px solid #FFF;
   }
@@ -172,7 +175,11 @@
     margin-bottom: 10px;
     /*height: 180px;*/
   }
-  /*
+
+  .workers img {
+    max-width: 160px;
+  }
+
   .team-yellow {
     width: 100%;
     margin-top: 20px;
@@ -212,22 +219,6 @@
   .team-green .worker-info {
     padding: 60px 15px;
     background: rgba( 106, 202, 157, 0.8);
-  }
-  */
-  .team-yellow {
-    background-image: url('../images/7_team/team_yellow.png');
-    background-size: 100% 100%;
-    padding: 132px 15px 126px 50px;
-    margin-left: -15px;
-    margin-right: 15px;
-    margin-bottom: 20px;
-  }
-  .team-green {
-    background-image: url('../images/7_team/team_green.png');
-    background-size: 100% 100%;
-    padding: 132px 50px 126px 15px;
-    margin-left: 15px;
-    margin-right: -15px;
   }
 
   .worker-name {
@@ -355,6 +346,14 @@
   }
   .services-msg:last-child {
     margin-bottom: 0;
+  }
+
+  #features {
+    padding-top: 0;
+  }
+
+  #services, #partner, #organisation, #contact {
+    padding-top: 10%;
   }
 
   #features {
@@ -759,7 +758,6 @@ section img {
 
 #services {
   background-color: #fafafa;
-  padding-top: 12%;
   padding-bottom: 6%;
   color: #FFF;
 }
@@ -786,7 +784,6 @@ section img {
   -o-background-size: cover;
   background-size: cover;
 
-  padding-top: 8%;
   padding-bottom: 5%;
   border-top: 2px solid #FFF;
 }
@@ -801,9 +798,7 @@ section img {
   text-align: center;
 }
 
-
 #contact {
-  padding-top: 8%;
   padding-bottom: 5%;
 }
 #contact_taipei {
@@ -878,7 +873,6 @@ html, body {
 */
 
 #partner {
-  padding-top: 10%;
   padding-bottom: 20%;
 }
 
